--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
+        <img src="img/um-avatar-para-o-meu-facebook-com-oculos-de-cabelo-castanho-e-um-sorriso-bonito-em-uma-camiseta-de-fundo-branco_969863-10087.avif" alt="avatar da Amanda" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">_Meu nome é Amanda_</p>
         <h1>Eu tenho aula de Programação</h1>
@@ -36,11 +36,10 @@
                 <div class="card">
                     <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
-                        <p class="card-text">Este projeto é uma página web que apresenta uma lista dos meus livros
-                            favoritos, incluindo informações sobre os autores, datas de publicação e links para compra
-                            na Amazon. A página é estilizada com CSS para uma visualização agradável e usa fontes
-                            externas do Google Fonts.
+                        <h5 class="card-title">Padaria Doce Sonho</h5>
+                        <p class="card-text">Este projeto é uma página web que apresenta uma lista dos tipos de pães
+                            que são vendidos, incluindo informações sobre a padaria, fotos para ilustrar o tipo de pães que a padaria oferece. 
+                            A página é estilizada com CSS para uma boa visualização.
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja
                             o projeto</button>
@@ -52,8 +51,7 @@
                 <div class="card">
                     <img src="img/projeto-2.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Decidindo o Futuro: Uma Jornada Interativa sobre a Inteligência
-                            Artificial</h5>
+                        <h5 class="card-title">CineFlix: site de filmes e séries</h5>
                         <p class="card-text">Este projeto é um jogo interativo baseado em navegador que explora o
                             impacto e as implicações da Inteligência Artificial (IA) na sociedade, permitindo que as
                             pessoas jogadoras façam escolhas que influenciam o desenrolar de uma narrativa sobre o
@@ -115,8 +113,8 @@
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://femascheti.github.io/minhas-leituras/">Ver projeto ao vivo</a>
-                    <a href="https://github.com/femascheti/minhas-leituras">Ver código do projeto</a>
+                    <a href="https://amandafr9.github.io/site-escola/">Ver projeto ao vivo</a>
+                    <a href="https://github.com/amandafr9/site-escola.git">Ver código do projeto</a>
                 </div>
             </div>
         </div>
@@ -160,9 +158,9 @@
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://femascheti.github.io/tecnicas-computacionais-refletindo-sobre-ia/">Ver projeto ao
+                    <a href="https://amandafr9.github.io/outro-site/">Ver projeto ao
                         vivo</a>
-                    <a href="https://github.com/femascheti/tecnicas-computacionais-refletindo-sobre-ia">Ver código do
+                    <a href="https://github.com/amandafr9/outro-site.git">Ver código do
                         projeto</a>
                 </div>
             </div>
