--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <!-- Projeto 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="img/padaria.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Padaria Doce Sonho</h5>
                         <p class="card-text">Este projeto é uma página web que apresenta uma lista dos tipos de pães
@@ -49,13 +49,11 @@
             <!-- Projeto 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-2.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="img/cineflix.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">CineFlix: site de filmes e séries</h5>
-                        <p class="card-text">Este projeto é um jogo interativo baseado em navegador que explora o
-                            impacto e as implicações da Inteligência Artificial (IA) na sociedade, permitindo que as
-                            pessoas jogadoras façam escolhas que influenciam o desenrolar de uma narrativa sobre o
-                            futuro da IA.</p>
+                        <p class="card-text">Este projeto é um site para assinar filmes e séries, com aplicativo e informações
+                            sobre todo o entretenimento, ele faz com que você tenha seu cinema em casa.</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Veja
                             o projeto</button>
                     </div>
@@ -65,13 +63,12 @@
             <!-- Projeto 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-3.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="img/cards.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Explorando o Universo: Uma Aventura Interativa em Astronomia com Scratch
+                        <h5 class="card-title">FlashCards: Jogo Interativo 
                         </h5>
-                        <p class="card-text">EEste projeto Scratch cria uma experiência interativa educativa sobre
-                            astronomia, permitindo aos usuários explorar informações sobre constelações, eclipses, e a
-                            forma da Terra através de cenários dinâmicos e diálogos informativos.
+                        <p class="card-text">Este projeto de cards cria um jogo interativo de perguntas e respostas sobre futebol e filme, 
+                            oque permite os usuários ter novas informações sobre esses assuntos de uma forma dinâmica.
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
                             o projeto</button>
@@ -86,30 +83,23 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                    <h5 class="modal-title">Padaria Doce Sonho</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>O projeto é uma página web criada com HTML e CSS, destinada a exibir uma coleção pessoal de
-                        livros favoritos. O objetivo é criar um ambiente virtual onde seja possível compartilhar
-                        seus livros preferidos, fornecendo uma descrição breve de cada um, incluindo o autor, o ano
-                        de publicação e uma opção de compra.</p>
+                    <p>A Padaria Doce Sonho lançou um site encantador, desenvolvido com HTML e CSS, para apresentar seus deliciosos pães. 
+                        A interface é limpa e acolhedora, com um cabeçalho que exibe o logotipo e um menu de navegação simples.
+                    </p>
                     <p>A estrutura do site é baseada em HTML, que define a semântica e o layout do conteúdo,
                         enquanto o CSS é usado para estilizar a página visualmente, incluindo cores, tipografia e a
                         disposição dos elementos.</p>
-                    <p>O HTML organiza o conteúdo em um cabeçalho com o título do site, seguido por uma divisão
-                        principal (.container) que apresenta o propósito do site e a coleção de livros em uma seção
-                        flexível (.livros). Cada livro é destacado em seu próprio contêiner (.livro), mostrando uma
-                        imagem da capa, detalhes do livro e um link de compra. O design responsivo é garantido pelo
-                        uso de uma meta tag viewport e um layout flexível que se adapta a diferentes tamanhos de
-                        tela.</p>
-                    <p>O CSS personaliza o visual do site, usando variáveis para cores, estilizando o texto com uma
-                        fonte importada do Google Fonts e aplicando um esquema de cores suaves e botões interativos.
-                        O uso de HTML e CSS é importante pois assim é possível criar um site acessível e
-                        esteticamente agradável sem a necessidade de scripts complexos, com foco na usabilidade e na
-                        experiência da pessoa usuária. A escolha da tipografia e do esquema de cores contribui para
-                        a atmosfera acolhedora do site, incentivando a exploração da coleção de livros.</p>
-                    <img src="img/projeto-1.png" class="img-fluid w-100"
+                    <p>Na página inicial, imagens vibrantes destacam pães populares, como baguetes e pães doces, acompanhadas de descrições
+                         dos ingredientes. O site também apresenta promoções da semana e depoimentos de clientes satisfeitos.</p>
+                    <p>
+                        Com um layout responsivo, o site é acessível em dispositivos móveis, permitindo que os clientes naveguem e façam pedidos
+                         facilmente. Cores quentes e elementos visuais criam uma atmosfera convidativa. Um formulário de contato permite que os 
+                         clientes enviem dúvidas. Assim, o site oferece uma experiência online memorável, convidando todos a saborear as delícias da Doce Sonho.</p>
+                    <img src="img/padaria.jpg" class="img-fluid w-100"
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
@@ -124,37 +114,25 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                    <h5 class="modal-title">CineFlix: site de filmes e séries</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>O projeto consiste em uma aplicação web interativa, desenvolvida com HTML, CSS, e JavaScript, que
-                        simula uma experiência narrativa centrada no tema da Inteligência Artificial. O objetivo é
-                        engajar os jogadores em um cenário fictício que aborda o avanço da IA e suas possíveis
-                        consequências para a humanidade, destacando a importância da reflexão ética sobre a tecnologia.
+                    <p>Um novo site foi criado para facilitar a vida dos amantes de filmes e séries, desenvolvido com HTML e CSS. A plataforma 
+                        oferece informações sobre serviços de assinatura, aplicativos disponíveis e uma ampla seleção de títulos.
                     </p>
-                    <p>O HTML estrutura o conteúdo da página, dividindo-o em seções como a tela inicial, caixa de
-                        perguntas, alternativas de resposta, e o resultado final baseado nas escolhas do jogador. O CSS
-                        é utilizado para estilizar a página, empregando um esquema de cores futurista e layout
-                        responsivo para melhorar a experiência do usuário. JavaScript é usado para adicionar
-                        interatividade ao jogo, manipulando o DOM para atualizar o conteúdo da página conforme as
-                        escolhas do jogador, e determinando o fluxo da narrativa através de uma série de perguntas e
-                        respostas.</p>
-                    <p>O HTML organiza o conteúdo em um cabeçalho com o título do site, seguido por uma divisão
-                        principal (.container) que apresenta o propósito do site e a coleção de livros em uma seção
-                        flexível (.livros). Cada livro é destacado em seu próprio contêiner (.livro), mostrando uma
-                        imagem da capa, detalhes do livro e um link de compra. O design responsivo é garantido pelo
-                        uso de uma meta tag viewport e um layout flexível que se adapta a diferentes tamanhos de
-                        tela.</p>
-                    <p>Os scripts JavaScript incluem módulos para gerar nomes aleatórios, definir as perguntas e as
-                        lógicas de jogo, como iniciar o jogo, apresentar perguntas e alternativas, processar as escolhas
-                        dos jogadores, e exibir o resultado final. Este design modular facilita a manutenção e a
-                        expansão futura do jogo. A importância das ferramentas utilizadas (HTML, CSS, JavaScript) reside
-                        na criação de uma experiência interativa que não apenas entretém, mas também educa os jogadores
-                        sobre a complexidade ética e social da IA, incentivando a reflexão crítica sobre o papel da
-                        tecnologia em nossas vidas.
+                    <p>Com uma interface moderna e intuitiva, o site destaca as principais plataformas de streaming, como Netflix e Amazon Prime 
+                        Video. A página inicial apresenta lançamentos recentes, resenhas e descrições detalhadas dos filmes e séries.
                     </p>
-                    <img src="img/projeto-2.png" class="img-fluid w-100"
+                    <p>Uma seção dedicada a aplicativos fornece orientações sobre como acessar os serviços em diferentes dispositivos. O site 
+                        também inclui um blog com artigos sobre tendências do entretenimento, análises e dicas.
+                    </p>
+                    <p>O layout responsivo garante acessibilidade em dispositivos móveis, enquanto cores vibrantes criam uma atmosfera envolvente. 
+                        Um formulário de contato permite o envio de dúvidas ou sugestões. Essa plataforma é um recurso valioso para quem deseja explorar 
+                        novas opções de entretenimento.
+
+                    </p>
+                    <img src="img/cineflix.jpg" class="img-fluid w-100"
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
@@ -172,33 +150,28 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                    <h5 class="modal-title">FlashCards: Jogo Interativo </h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>O projeto é uma aplicação educativa interativa focada em ensinar conceitos básicos de
-                        astronomia. Utiliza uma série de scripts associados a diferentes atores (sprites) e
-                        cenários para criar uma experiência de aprendizado envolvente. O objetivo é familiarizar
-                        os usuários com tópicos como as fases da Lua, eclipses, a visibilidade de diferentes
-                        constelações dependendo da localização geográfica na Terra, e a forma da Terra, através
-                        de interações e visualizações dinâmicas.</p>
-                    <p>Cada ator no projeto possui scripts que definem seu comportamento em resposta a eventos
-                        específicos, como o início do programa (quando a bandeira é clicada), cliques do
-                        usuário, ou mensagens recebidas. Estes eventos desencadeiam ações como mudanças de
-                        cenário, movimentos de atores, exibição ou ocultação de atores, e a apresentação de
-                        diálogos informativos. Por exemplo, ao clicar em determinados atores, os usuários podem
-                        "receber" uma prova, o que leva a uma mudança de cenário e a exibição de informações
-                        relevantes ou a visualização de uma constelação específica.</p>
+                    <p>Um novo site foi desenvolvido em HTML e CSS, oferecendo uma experiência interativa com flashcards de perguntas e 
+                        respostas sobre filmes e futebol. Os usuários podem escolher entre os dois temas e explorar uma tela cheia de flashcards
+                         coloridos, onde as perguntas aparecem ao clicar, revelando as respostas na sequência.
+                    </p>
+                    <p>O site inclui um sistema de pontuação que permite aos usuários acompanhar seu desempenho e competir com amigos. Há também um modo de “desafio rápido” para responder a perguntas em tempo limitado. Com um layout responsivo, o site funciona bem em dispositivos móveis e desktops, garantindo acessibilidade em qualquer lugar.</p>
                     <p>A importância das ferramentas utilizadas, como os blocos de código visual do Scratch,
                         reside na sua acessibilidade e na capacidade de engajar aprendizes de diferentes idades
                         no pensamento computacional e na exploração de conceitos científicos de forma
                         interativa. O uso de cenários, movimentos, e diálogos dinâmicos ajuda a criar uma
                         experiência de aprendizado mais rica e memorável, encorajando os usuários a explorar e
                         interagir com o conteúdo de maneira ativa, em vez de passivamente.</p>
-                    <img src="img/projeto-3.png" alt="Projeto 3" class="img-fluid w-100">
+                    <img src="img/cards.jpg" alt="Projeto 3" class="img-fluid w-100">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://scratch.mit.edu/projects/951732825/">Ver projeto ao vivo</a>
+                    <a href=" https://amandafr9.github.io/4.site/">Ver projeto ao
+                        vivo</a>
+                    <a href="https://github.com/amandafr9/4.site.git">Ver código do
+                        projeto</a>
                 </div>
             </div>
         </div>
